--- a/index.html
+++ b/index.html
@@ -3550,7 +3550,7 @@
                               <div class="elementor-button-wrapper">
                                 <a
                                   class="elementor-button elementor-button-link elementor-size-sm"
-                                  href="https://app.uniswap.org/#/swap?inputCurrency=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2&#038;outputCurrency=0x87CD6EC2C0A14aF16574E13E1a7be486Cd6cD8F4&#038;exactField=output"
+                                  href="https://app.uniswap.org/#/swap?inputCurrency=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2&#038;outputCurrency=0xcomingsoon&#038;exactField=output"
                                   target="_blank"
                                 >
                                   <span
@@ -3686,7 +3686,7 @@
                                   data-widget_type="image.default"
                                 >
                                   <div class="elementor-widget-container">
-                                    <a href="https://t.me/PepebyMattFurieETH">
+                                    <a href="https://t.me/Pepe_Furie_eth">
                                       <img
                                         loading="lazy"
                                         decoding="async"
@@ -3719,7 +3719,7 @@
                                   data-widget_type="image.default"
                                 >
                                   <div class="elementor-widget-container">
-                                    <a href="https://x.com/pepe_by_mf">
+                                    <a href="https://x.com/Pepe_Furie_eth">
                                       <img
                                         loading="lazy"
                                         decoding="async"
@@ -3753,7 +3753,7 @@
                                 >
                                   <div class="elementor-widget-container">
                                     <a
-                                      href="https://dexscreener.com/ethereum/0x87CD6EC2C0A14aF16574E13E1a7be486Cd6cD8F4"
+                                      href="https://dexscreener.com/ethereum/0xcomingsoon"
                                     >
                                       <img
                                         loading="lazy"
@@ -4079,7 +4079,7 @@
                             <div class="elementor-button-wrapper">
                               <a
                                 class="elementor-button elementor-button-link elementor-size-sm"
-                                href="https://etherscan.io/address/0x87CD6EC2C0A14aF16574E13E1a7be486Cd6cD8F4"
+                                href="https://etherscan.io/address/0xcomingsoon"
                                 target="_blank"
                               >
                                 <span class="elementor-button-content-wrapper">
@@ -4107,7 +4107,7 @@
                             <h2
                               class="elementor-heading-title elementor-size-default"
                             >
-                              0x87CD6EC2C0A14aF16574E13E1a7be486Cd6cD8F4
+                              0xcomingsoon
                             </h2>
                           </div>
                         </div>
