--- a/index.html
+++ b/index.html
@@ -3550,7 +3550,7 @@
                               <div class="elementor-button-wrapper">
                                 <a
                                   class="elementor-button elementor-button-link elementor-size-sm"
-                                  href="https://app.uniswap.org/#/swap?inputCurrency=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2&#038;outputCurrency=0xcomingsoon&#038;exactField=output"
+                                  href="https://app.uniswap.org/#/swap?inputCurrency=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2&#038;outputCurrency=0x77819445e8d41e96b884df014f1a8c089605ae18&#038;exactField=output"
                                   target="_blank"
                                 >
                                   <span
@@ -3753,7 +3753,7 @@
                                 >
                                   <div class="elementor-widget-container">
                                     <a
-                                      href="https://dexscreener.com/ethereum/0xcomingsoon"
+                                      href="https://dexscreener.com/ethereum/0x77819445e8d41e96b884df014f1a8c089605ae18"
                                     >
                                       <img
                                         loading="lazy"
@@ -4079,7 +4079,7 @@
                             <div class="elementor-button-wrapper">
                               <a
                                 class="elementor-button elementor-button-link elementor-size-sm"
-                                href="https://etherscan.io/address/0xcomingsoon"
+                                href="https://etherscan.io/address/0x77819445e8d41e96b884df014f1a8c089605ae18"
                                 target="_blank"
                               >
                                 <span class="elementor-button-content-wrapper">
@@ -4107,7 +4107,7 @@
                             <h2
                               class="elementor-heading-title elementor-size-default"
                             >
-                              0xcomingsoon
+                              0x77819445e8d41e96b884df014f1a8c089605ae18
                             </h2>
                           </div>
                         </div>
